--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,27 +1,36 @@
 name: Android CI
+
 on:
   push:
     branches: [ "main" ]
   pull_request:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
+
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
+
       - name: Install SDK components
         run: sdkmanager "platform-tools" "platforms;android-34" "build-tools;34.0.0"
-      - name: Generate Gradle wrapper
-        run: gradle wrapper
-      - name: Build debug APK
-        run: ./gradlew assembleDebug
+
+      # Gradle wrapper yok; bu adım Gradle'ı sağlıyor ve 'gradle' komutuyla build alıyoruz
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.7
+          arguments: assembleDebug
+
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
