--- a/buid.gradle
+++ b/buid.gradle
@@ -1,10 +1,22 @@
 buildscript {
-  ext.kotlin_version = '1.9.0'
-  repositories { google(); mavenCentral() }
-  dependencies {
-    classpath "com.android.tools.build:gradle:8.1.1"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-  }
+    ext.kotlin_version = '1.9.24'
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:8.6.0"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
 }
-allprojects { repositories { google(); mavenCentral() } }
-task clean(type: Delete) { delete rootProject.buildDir }
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
