--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,5 @@
 // === Root build.gradle (PROJECT LEVEL) ===
-buildscript {
-    ext.kotlin_version = '1.9.24'
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:8.6.0"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-
-// (AGP 8+ ile zorunlu değil ama güvenli)
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-// Temizlik
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
+plugins {
+    id 'com.android.application' version '8.6.0' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.24' apply false
 }
